module(
    name = "behavioral_model",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.2.9")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_foreign_cc", version = "0.13.0")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "nanomsg",
    urls = ["https://github.com/nanomsg/nanomsg/archive/1.0.0.tar.gz"],
    strip_prefix = "nanomsg-1.0.0",
    sha256 = "24afdeb71b2e362e8a003a7ecc906e1b84fd9f56ce15ec567481d1bb33132cc7",
    build_file_content = """
filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
""",
)
